# storage/api-docs/api-docs.json
@@ -149,6 +149,9 @@
                                     },
                                     "phone": {
                                         "type": "string"
+                                    },
+                                    "photo": {
+                                        "type": "file"
                                     }
                                 },
                                 "type": "object",
@@ -248,6 +251,9 @@
                                     },
                                     "phone": {
                                         "type": "string"
+                                    },
+                                    "photo": {
+                                        "type": "file"
                                     }
                                 },
                                 "type": "object",
